# coupled-resonator-identification

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: scope_11.txt  scope_11_1.csv  scope_12.txt  scope_12_1.csv  scope_13.txt  scope_13_1.csv  scope_14.txt  scope_14_1.csv  scope_15.txt  scope_15_1.csv  scope_17.txt  scope_17_1.csv  scope_18.txt  scope_18_1.csv  scope_19_1.csv  scope_20.txt  scope_20_1.csv  scope_21.txt  scope_21_1.csv  scope_22.txt  scope_22_1.csv  scope_23.txt  scope_23_1.csv  scope_24.txt  scope_24_1.csv  scope_25.txt  scope_25_1.csv
docs/: learned-models-plan.md
results/: coupled_modes_events.csv
scripts/: make_cover_gif.py  make_story_figures.py  run_bistability_prediction.py  run_coupled_modes.py  run_koopman_ae.py  run_sindy_autoencoder.py  run_sindy_latents.py
src/coupled_id/: __init__.py  events.py  modal.py  physics.py  spectral.py
tests/: test_coupled_id.py
