[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coupled-resonator-identification"
version = "0.1.0"
description = "Modal identification of coupled resonators from a single measured channel: event segmentation, delay-embedded DMD, backbones, and bistability assessment."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Scripts intentionally adjust sys.path (and the matplotlib backend) before importing.
"scripts/*" = ["E402"]
